--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "aleo";
+  src: url(fonts/aleo/aleo-regular-webfont.woff2), format("woff2"),
+    url(fonts/aleo/aleo-regular-webfont.woff), format("woff");
+  font-size: normal;
+  font-style: normal;
+}
+/* general */
 *,
 ::after,
 ::before {
@@ -7,6 +15,13 @@
 }
 body {
   background-color: #eff3f6;
+}
+h1,
+h2,
+h3,
+h4,
+p {
+  font-family: "aleo", serif;
 }
 figure img {
   width: 430px;
